[package]
name = "dino_park_gate"
version = "0.3.0"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/dino-park-gate"
documentation = "https://docs.rs/crate/dino-park-gate"
keywords = ["actix", "middleware", "authentication"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
localuserscope = []

[dependencies]
shared-expiry-get = "0.1.0"
failure = "0.1"
failure_derive = "0.1"
biscuit = "0.4"
url = "2.1"
actix-web = "2.0"
actix-service = "1.0"
env_logger = "0.7"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json"] }
bitflags = "1.0.4"
futures = "0.3"
log = "0.4"

[dev-dependencies]
tokio-test = "0.2"
actix-rt = "1.0"
