[package]
name = "dino_park_gate"
version = "0.8.0"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/dino-park-gate"
documentation = "https://docs.rs/crate/dino-park-gate"
keywords = ["actix", "middleware", "authentication"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
localuserscope = []

[dependencies]
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.7",  version = "0.0.7" }
dino-park-oidc = { git = "https://github.com/mozilla-iam/dino-park-oidc", tag = "0.0.1", version = "0.0.1" }
shared-expiry-get = "0.1"
failure = "0.1"
failure_derive = "0.1"
biscuit = "0.4"
url = "2"
actix-web = "3"
actix-service = "1"
env_logger = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json"] }
bitflags = "1"
futures = "0.3"
log = "0.4"

[dev-dependencies]
tokio-test = "0.2"
actix-rt = "1.0"
