[package]
name = "dino_park_gate"
version = "0.10.0"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/dino-park-gate"
documentation = "https://docs.rs/crate/dino-park-gate"
keywords = ["actix", "middleware", "authentication"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
localuserscope = []

[dependencies]
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", branch = "0.1",  version = "0.1" }
dino-park-oidc = { git = "https://github.com/mozilla-iam/dino-park-oidc", branch = "0.1", version = "0.1" }
shared-expiry-get = "0.2"
thiserror = "1"
biscuit = "0.5"
url = "2"
actix-web = "4.0.0-beta.3"
actix-service = "2.0.0-beta.4"
env_logger = "0.8"
serde = "1"
serde_json = "1"
serde_derive = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
bitflags = "1"
futures = "0.3"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
actix-rt = "2"
